# scrapesomeapp

./: .dockerignore  .gitignore  LICENSE  README.md  dockerfile  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: deploy.yml
UI-Documentation/: 404.html  index.html
UI-Documentation/about/: index.html
UI-Documentation/cli/: index.html
UI-Documentation/config/: index.html
UI-Documentation/contribution/: index.html
UI-Documentation/examples/: index.html
UI-Documentation/file-saving/: index.html
UI-Documentation/getting-started/: index.html
UI-Documentation/licence/: index.html
UI-Documentation/output-formats/: index.html
UI-Documentation/usage/: index.html
app/: asgi.py  main.py
app/api_key/: models.py
app/middlewares/: token_middleware.py
app/public/routes/: documentation.py
app/routes/: routes.py
app/settings/: config.py  db_config.py  logging.py
app/user/: dependency.py  models.py  routes.py  schemas.py  service.py
app/utils/: auth.py  string_utils.py
docs/: about.md  cli.md  config.md  contribution.md  examples.md  file-saving.md  getting-started.md  index.md  licence.md  output-formats.md  usage.md
scrapesome/: __init__.py  config.py  exceptions.py  logging.py
scrapesome/formatter/: output_formatter.py
scrapesome/scraper/: async_scraper.py  rendering.py  sync_scraper.py
tests/: test_async_scraper_mocked.py  test_config.py  test_logging.py  test_output_formatter.py  test_sync_scraper_mocked.py
