[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrapesome"
version = "0.0.1"
description = "A Powerful Web Scraper with dynamic rendering support."
authors = [
    { name = "Vishnu Vardhan Reddy", email = "gvvr2024@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.6"

[tool.setuptools]
packages = ["scrapesome"]

[project.urls]
"Homepage" = "https://scrapesome.onrender.com"
"Repository" = "https://github.com/ScrapeSome/ScrapeSome"
